--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             </div>        
         </div>
 
-        <section id="test"></section>
+        <section id="error-text"></section>
         <section id="recipes"></section>
         
 
